--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.7",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
