--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=reactivities.db"
-  }
+  },
+  "TokenKey": "n2XMsj6.>Q-^q#9T;{4,u[\r\np{-g$26(#5tn}BY,9RW4)&\r\nK#{P.*4z9h=?RH_wU<GMeX\r\nv7>hS;fT!nPGK}'MCY.36V\r\na@DYdUF-G=>9{.[V*NfZ`ksuper secret key"
 }
