--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,18 +12,24 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "date-picker": "^0.5.0",
+    "datepicker": "^0.0.0",
+    "formik": "^2.4.6",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.2"
+    "@types/react-datepicker": "^7.0.0",
+    "@types/uuid": "^9.0.2",
+    "@types/yup": "^0.32.0"
   }
 }
